--- a/css/style.css
+++ b/css/style.css
@@ -237,16 +237,16 @@ h6,
     }
 }
 
-.carousel-control-prev,
+/* .carousel-control-prev,
 .carousel-control-next {
     width: 10%;
-}
+} */
 
-.carousel-control-prev-icon,
+/* .carousel-control-prev-icon,
 .carousel-control-next-icon {
     width: 3rem;
     height: 3rem;
-}
+} */
 
 
 /*** Section Title ***/
